--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: Frontend
-        run: npm ci
+        run: npm install
 
       - name: Build
         working-directory: Frontend
