--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,6 @@ jobs:
       - name: Deploy to Azure Static Web Apps
         uses: azure/static-web-apps-deploy@v1
         with:
-          app-location: '/'
-          output-location: 'Frontend/dist/geo-local/browser'
-          azure-static-web-apps-api-token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          app_location: '/'
+          output_location: 'Frontend/dist/geo-local/browser'
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
