--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,8 @@ jobs:
       - name: Deploy to Azure Static Web Apps
         uses: azure/static-web-apps-deploy@v1
         with:
-          app_location: '/'
-          output_location: 'Frontend/dist/geo-local/browser'
+          action: 'upload'
+          app_location: 'Frontend/dist/geo-local/browser'
+          output_location: ''
+          skip_app_build: true
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
