--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "Cors": {
-    "AllowedOrigins": "https://geolocalapi-bjdud6bzgwhub0ce.centralus-01.azurewebsites.net/"
+    "AllowedOrigins": "https://red-forest-06eedc11e.4.azurestaticapps.net/"
   }
 }
